// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App (archived page) matches snapshot when plants and groups exist 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Main overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Edit
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Archived
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          >
            <ul
              class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3 w-24"
              tabindex="0"
            >
              <li>
                <a
                  class="flex justify-center"
                >
                  Plants
                </a>
              </li>
              <li>
                <a
                  class="flex justify-center"
                >
                  Groups
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4 md:grid-cols-2"
    >
      <div
        class="scroll-mt-20 md:mr-12 mb-8 md:mb-0"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Plants (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Species
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Watered
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test Plant"
                    class="radio my-auto"
                    id=":rc:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test Plant page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content grayscale"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":rd:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <figure
                          class="h-24 w-20 min-size-20"
                        >
                          <img
                            alt="Test Plant photo"
                            class="size-full object-cover"
                            draggable="false"
                            loading="lazy"
                            src="/media/thumbnails/photo_thumb.jpg"
                          />
                        </figure>
                        <div
                          class="card-body max-w-full my-auto text-start"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words pr-8"
                          >
                            Test Plant
                          </h2>
                          <span
                            class="line-clamp-1"
                            title="06:44 PM - February 25, 2024"
                          >
                            <svg
                              class="fa-inline mr-2 text-info"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 384 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                              />
                            </svg>
                            5 days ago
                          </span>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":rd:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Species:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Calathea
                          </span>
                        </p>
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Pot size:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            4
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":rc:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="scroll-mt-20 md:ml-12"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Groups (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Location
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test group"
                    class="radio my-auto"
                    id=":re:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test group page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content grayscale"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":rf:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <div
                          class="card-body max-w-full my-auto text-center"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words text-center px-8"
                          >
                            Test group
                          </h2>
                          <p>
                            Contains 
                            4
                             plants
                          </p>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":rf:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Location:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Middle shelf
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":re:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Un-archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;

exports[`App matches snapshot when no models exist (setup) 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Print QR Codes
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Plant Overview
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4"
    >
      <div
        class="flex flex-col text-center my-auto px-8"
      >
        <p
          class="text-2xl"
        >
          No plants found!
        </p>
        <ul
          class="steps steps-vertical my-8"
        >
          <li
            class="step"
          >
            Print QR codes on sticker paper
          </li>
          <li
            class="step"
          >
            Add a sticker to each plant pot
          </li>
          <li
            class="step"
          >
            Scan codes to register plants!
          </li>
        </ul>
        <button
          class="btn btn-accent text-lg"
        >
          Print QR Codes
        </button>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;

exports[`App matches snapshot when only groups exist 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/archived"
            >
              Archived plants
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Edit
            </a>
          </li>
          <li>
            <a>
              Print QR Codes
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Plant Overview
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4"
    >
      <div
        class="scroll-mt-20"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Groups (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Location
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test group"
                    class="radio my-auto"
                    id=":ra:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test group page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":rb:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <div
                          class="card-body max-w-full my-auto text-center"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words text-center px-8"
                          >
                            Test group
                          </h2>
                          <p>
                            Contains 
                            4
                             plants
                          </p>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":rb:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Location:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Middle shelf
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":ra:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;

exports[`App matches snapshot when only plants exist 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/archived"
            >
              Archived plants
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Edit
            </a>
          </li>
          <li>
            <a>
              Print QR Codes
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Plant Overview
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4"
    >
      <div
        class="scroll-mt-20"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Plants (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Species
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Watered
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test Plant"
                    class="radio my-auto"
                    id=":r8:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test Plant page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":r9:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <figure
                          class="h-24 w-20 min-size-20"
                        >
                          <img
                            alt="Test Plant photo"
                            class="size-full object-cover"
                            draggable="false"
                            loading="lazy"
                            src="/media/thumbnails/photo_thumb.jpg"
                          />
                        </figure>
                        <div
                          class="card-body max-w-full my-auto text-start"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words pr-8"
                          >
                            Test Plant
                          </h2>
                          <span
                            class="line-clamp-1"
                            title="06:44 PM - February 25, 2024"
                          >
                            <svg
                              class="fa-inline mr-2 text-info"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 384 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                              />
                            </svg>
                            5 days ago
                          </span>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":r9:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Species:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Calathea
                          </span>
                        </p>
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Pot size:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            4
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":r8:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;

exports[`App matches snapshot when plants and groups exist (desktop layout) 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/archived"
            >
              Archived plants
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Edit
            </a>
          </li>
          <li>
            <a>
              Print QR Codes
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Plant Overview
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4 md:grid-cols-2"
    >
      <div
        class="scroll-mt-20 md:mr-12 mb-8 md:mb-0"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Plants (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Species
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Watered
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test Plant"
                    class="radio my-auto"
                    id=":r0:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test Plant page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":r1:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <figure
                          class="h-24 w-20 min-size-20"
                        >
                          <img
                            alt="Test Plant photo"
                            class="size-full object-cover"
                            draggable="false"
                            loading="lazy"
                            src="/media/thumbnails/photo_thumb.jpg"
                          />
                        </figure>
                        <div
                          class="card-body max-w-full my-auto text-start"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words pr-8"
                          >
                            Test Plant
                          </h2>
                          <span
                            class="line-clamp-1"
                            title="06:44 PM - February 25, 2024"
                          >
                            <svg
                              class="fa-inline mr-2 text-info"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 384 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                              />
                            </svg>
                            5 days ago
                          </span>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":r1:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Species:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Calathea
                          </span>
                        </p>
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Pot size:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            4
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":r0:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="scroll-mt-20 md:ml-12"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Groups (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Location
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test group"
                    class="radio my-auto"
                    id=":r2:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test group page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":r3:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <div
                          class="card-body max-w-full my-auto text-center"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words text-center px-8"
                          >
                            Test group
                          </h2>
                          <p>
                            Contains 
                            4
                             plants
                          </p>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":r3:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Location:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Middle shelf
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":r2:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;

exports[`App matches snapshot when plants and groups exist (mobile layout) 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto pb-28"
  >
    <div
      class="navbar bg-base-100 mb-4 sticky top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/archived"
            >
              Archived plants
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <a>
              Edit
            </a>
          </li>
          <li>
            <a>
              Print QR Codes
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="btn btn-ghost w-full px-0 text-nowrap"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Plant Overview
            </span>
          </a>
          <div
            class="dropdown-content z-1 flex"
            tabindex="0"
          >
            <ul
              class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3 w-24"
              tabindex="0"
            >
              <li>
                <a
                  class="flex justify-center"
                >
                  Plants
                </a>
              </li>
              <li>
                <a
                  class="flex justify-center"
                >
                  Groups
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      />
    </div>
    <div
      class="grid grid-cols-1 mx-auto px-4 md:grid-cols-2"
    >
      <div
        class="scroll-mt-20 md:mr-12 mb-8 md:mb-0"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Plants (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Species
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Watered
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test Plant"
                    class="radio my-auto"
                    id=":r4:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test Plant page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":r5:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <figure
                          class="h-24 w-20 min-size-20"
                        >
                          <img
                            alt="Test Plant photo"
                            class="size-full object-cover"
                            draggable="false"
                            loading="lazy"
                            src="/media/thumbnails/photo_thumb.jpg"
                          />
                        </figure>
                        <div
                          class="card-body max-w-full my-auto text-start"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words pr-8"
                          >
                            Test Plant
                          </h2>
                          <span
                            class="line-clamp-1"
                            title="06:44 PM - February 25, 2024"
                          >
                            <svg
                              class="fa-inline mr-2 text-info"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 384 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                              />
                            </svg>
                            5 days ago
                          </span>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":r5:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Species:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Calathea
                          </span>
                        </p>
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Pot size:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            4
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":r4:-0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="scroll-mt-20 md:ml-12"
      >
        <div
          class="section"
        >
          <div
            class="section-header"
          >
            <div
              class="flex dropdown dropdown-center min-h-[3.75rem]"
            >
              <div
                class="section-title btn btn-ghost cursor-pointer"
                role="button"
                tabindex="0"
              >
                Groups (1)
              </div>
              <div
                class="dropdown-content z-50 mt-14"
              />
            </div>
            <div
              class="flex px-4 mb-4"
            >
              <div
                class="relative w-full"
              >
                <input
                  class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                  placeholder="filter"
                  type="text"
                  value=""
                />
                <div
                  class="absolute flex top-2 right-2"
                >
                  <div
                    class="dropdown dropdown-end"
                  >
                    <div
                      class="btn-close size-8"
                      role="button"
                      tabindex="0"
                      title="Sort menu"
                    >
                      <svg
                        aria-hidden="true"
                        class="size-5 m-auto"
                        data-slot="icon"
                        fill="currentColor"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <ul
                      class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2"
                      tabindex="0"
                    >
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          <svg
                            class="fa-arrow-down-long mr-2"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                            />
                          </svg>
                          Added
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Name
                        </a>
                      </li>
                      <li>
                        <a
                          class="flex justify-end"
                        >
                          Location
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="section-content"
          >
            <form>
              <div
                class="flex relative mb-4"
              >
                <div
                  class="absolute flex h-full z-0"
                >
                  <input
                    aria-label="Select Test group"
                    class="radio my-auto"
                    id=":r6:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    name="0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                    tabindex="-1"
                    type="checkbox"
                  />
                </div>
                <div
                  class="w-full overflow-hidden transition-all duration-300 ml-0"
                >
                  <a
                    aria-label="Go to Test group page"
                    class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                    href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                  >
                    <input
                      class="hidden pointer-events-none"
                      id=":r7:"
                      type="checkbox"
                    />
                    <div
                      class="collapse-title min-size-0"
                    >
                      <div
                        class="card card-side relative h-24"
                      >
                        <div
                          class="card-body max-w-full my-auto text-center"
                        >
                          <h2
                            class="card-title line-clamp-1 break-words text-center px-8"
                          >
                            Test group
                          </h2>
                          <p>
                            Contains 
                            4
                             plants
                          </p>
                        </div>
                        <label
                          aria-label="Show or hide details"
                          class="btn-close absolute right-2 top-8 z-40"
                          for=":r7:"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                            data-slot="icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </label>
                      </div>
                    </div>
                    <div
                      class="collapse-content min-w-0"
                    >
                      <div
                        class="pt-4"
                      >
                        <p
                          class="flex"
                        >
                          <span
                            class="font-semibold break-keep mr-4"
                          >
                            Location:
                          </span>
                          <span
                            class="ml-auto text-right line-clamp-1 break-all"
                          >
                            Middle shelf
                          </span>
                        </p>
                      </div>
                    </div>
                  </a>
                </div>
                <label
                  class="cursor-pointer absolute z-20"
                  for=":r6:-0640ec3b-1bed-4b15-a078-d6e7ec66be14"
                />
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="floating-footer"
    >
      <button
        class="btn btn-neutral"
      >
        Cancel
      </button>
      <button
        class="btn"
      >
        Archive
      </button>
      <div
        class="tooltip hold-to-confirm-tooltip"
        data-tip="Hold to confirm"
      >
        <button
          class="btn btn-soft btn-error hold-to-confirm"
          style="--hold-duration: 2500ms;"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
    <dialog
      class="modal"
    >
      <div
        class="modal-box text-center flex flex-col pt-4 "
      >
        <form
          method="dialog"
        >
          <button
            aria-label="Close modal"
            class="btn-close absolute right-4 top-4"
          >
            <svg
              aria-hidden="true"
              class="size-8 min-size-8"
              data-slot="icon"
              fill="currentColor"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
              />
            </svg>
          </button>
        </form>
        <h1
          class="font-bold text-lg md:text-xl mb-4"
        >
          Select QR Code Size
        </h1>
      </div>
      <form
        class="modal-backdrop"
        method="dialog"
      >
        <button>
          close
        </button>
      </form>
    </dialog>
  </div>
</div>
`;
